<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backdesign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/write_email_address_here"
            android:background="@drawable/edittxtdesign"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_reg"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/write_password_here"
            android:background="@drawable/edittxtdesign"
            android:padding="10dp"
            android:inputType="textPassword"
            android:id="@+id/password_reg"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            tools:ignore="Autofill" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_up"
            android:id="@+id/btnsignup_reg"
            android:textColor="@android:color/white"
            android:background="@drawable/btndesign"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceLarge"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_in"
            android:id="@+id/btnsignin_reg"
            android:textColor="@android:color/white"
            android:background="@drawable/signupbutton"
            android:textAppearance="?android:textAppearanceMedium"
            />


    </LinearLayout>

</LinearLayout>