<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backdesign"
    tools:context=".ForgetPassword">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/we_will_mail_you_a_link_after_when_you_provide_email_and_click_the_send_button_plsease_click_on_that_link_to_reset_your_password"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="italic"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittxtdesign"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/write_email_address_here"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/btnreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btndesign"
            android:text="@string/send_email"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        />
    </LinearLayout>

</LinearLayout>