<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:layout_margin="15dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_16_february_2020"
                android:gravity="center"
                android:background="@drawable/recyclerviewdesign"
                android:layout_gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="10dp"
                android:id="@+id/date_item"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/it_s_my_title"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="#FF7414A4"
                android:id="@+id/name_item"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/it_s_my_title_description"
                android:maxLines="3"
                android:padding="5dp"
                android:id="@+id/description_item"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>